[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "health_insurance"
version = "0.0.1"
description = "Projeto de an\u00e1lise de propens\u00e3o de compra de seguros. O objetivo \u00e9 desenvolver um estudo e modelo de Machine Learning para ordena\u00e7\u00e3o da base de clientes pela probilidade de aquisi\u00e7\u00e3o de um segundo seguro, inicialmente de sa\u00fade e target um seguro de carro."
authors = [
  { name = "Andre Manzano" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["health_insurance"]
include = ["pyproject.toml", "health_insurance/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["health_insurance"]
force-sort-within-sections = true

